(deps) update laravel/nova dev requirement to allow v5
Expanded the version constraint for laravel/nova in require-dev to support both ^4.33.0 and ^5.0, enabling compatibility with the latest Nova releases.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "marshmallow/metadata": "^v1.2.0"
     },
     "require-dev": {
-        "laravel/nova": "^4.33.0"
+        "laravel/nova": "^4.33.0|^5.0"
     },
     "autoload": {
         "psr-4": {
